--- a/main.css
+++ b/main.css
@@ -1,18 +1,32 @@
-body {
+body{
+    width:100%;
+    margin:0;
+    overflow:hidden; 
+    background:hsla(0,0%,0%,1);
+    
+    }
+    canvas{
+      width:100%;
+      height:100vh;
+      margin:0;
+      background:hsla(0,0%,0%,1);
+    }
+     
+/*body {
     background-color: #1d1a42; /* Morado muy oscuro */
-    color: #ffffff; /* Letras de color blanco */
-    display: flex;
+    /*color: #ffffff; /* Letras de color blanco */
+    /*display: flex;
     justify-content: center;
     align-items: center;
     height: 50vh; /* Asegura que el contenido esté centrado verticalmente */
-    margin: 0; /* Elimina el margen predeterminado del cuerpo */
-    flex-direction: column; /* Establece la dirección de la columna para que las letras vayan de arriba hacia abajo */
-    zoom: 125%; /* Establece el zoom de la página */
-}
+    /*margin: 0; /* Elimina el margen predeterminado del cuerpo */
+    /*flex-direction: column; /* Establece la dirección de la columna para que las letras vayan de arriba hacia abajo */
+    /*zoom: 125%; /* Establece el zoom de la página */
+/*}
 
 h1, h2, h3, p {
     background-color: #000000; /* Fondo negro para las letras */
-    color: #cacaca; 
+    /*color: #cacaca; 
     padding: 10px;
     text-align: justify; 
     margin: 5px; 
