--- a/main.css
+++ b/main.css
@@ -1,38 +1,35 @@
-body{
-    width:100%;
-    margin:0;
-    overflow:hidden; 
-    background:hsla(0,0%,0%,1);
-    
-    }
-    canvas{
-      width:100%;
-      height:100vh;
-      margin:0;
-      background:hsla(0,0%,0%,1);
-    }
+body {
      
-/*body {
-    background-color: #1d1a42; /* Morado muy oscuro */
-    /*color: #ffffff; /* Letras de color blanco */
-    /*display: flex;
-    justify-content: center;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    display: flex;
     align-items: center;
-    height: 50vh; /* Asegura que el contenido esté centrado verticalmente */
-    /*margin: 0; /* Elimina el margen predeterminado del cuerpo */
-    /*flex-direction: column; /* Establece la dirección de la columna para que las letras vayan de arriba hacia abajo */
-    /*zoom: 125%; /* Establece el zoom de la página */
-/*}
-
+    justify-content: center;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8)), url('fondito.jpg');
+    background-size: cover; 
+    background-position: center; 
+    color: white; 
+    font-family: Arial, sans-serif; 
+    text-align: center;
+    height: 50vh;
+    flex-direction: column; 
+}
+    
 h1, h2, h3, p {
-    background-color: #000000; /* Fondo negro para las letras */
-    /*color: #cacaca; 
+    background-color: #511a5f; /* Fondo negro para las letras */
+    color: #cacaca; 
     padding: 10px;
     text-align: justify; 
     margin: 5px; 
     border-radius: 10px; 
 }
 
-h1 {
-    margin-top: 0; 
-}
+
+    
+        
+    
+    
+    
+
+
