--- a/main.css
+++ b/main.css
@@ -1,29 +1,29 @@
 body {
-     
     margin: 0;
     padding: 0;
     height: 100vh;
     display: flex;
     align-items: center;
-    justify-content: center;
+    flex-direction: column; 
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8)), url('fondito.jpg');
     background-size: cover; 
     background-position: center; 
-    color: white; 
+    color: rgb(255, 255, 255);
     font-family: Arial, sans-serif; 
     text-align: center;
-    height: 50vh;
-    flex-direction: column; 
 }
-    
+
 h1, h2, h3, p {
-    background-color: #511a5f; /* Fondo negro para las letras */
+    background-color: rgb(0, 0, 0);
     color: #cacaca; 
     padding: 10px;
     text-align: justify; 
     margin: 5px; 
     border-radius: 10px; 
 }
+
+
+
 
 
     
